2007-08-17  Corinna Vinschen  <corinna@vinschen.de>

	* spawn.cc (spawn_guts): Fix typo in comment.

2007-08-17  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (CloseDesktop): Define.
	(CreateDesktopA): Define.
	(SetThreadDesktop): Define.
	* spawn.cc (spawn_guts): When starting a process under another user
	account, don't open up permissions on current window station and
	desktop.  Instead, if not in interactive session, create a new per-user
	window station plus default desktop and use that for the child process.

2007-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::fchmod): Handle S_IFSOCK
	mode bit by setting the SYSTEM attribute.
	* fhandler_socket.cc (fhandler_socket::fchmod): Add S_IFSOCK mode bit
	when calling fhandler_disk_file::fchmod.  Don't set attributes here.

2007-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* path.h (path_conv::operator char *): Delete.
	(path_conv::operator const char *): Delete.
	* dlfcn.cc: Throughout, replace path_conv::operator char * and
	path_conv::operator const char * by call to path_conv::get_win32
	for easier transition to UNICODE_PATHs.
	* fhandler_socket.cc: Ditto.
	* hookapi.cc: Ditto.
	* path.cc: Ditto.
	* spawn.cc: Ditto.
	* syscalls.cc: Ditto.
	* uinfo.cc: Ditto.

2007-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc (readdir_worker): Convert w32name to PUNICODE_STRING.
	* sec_acl.cc (getacl): Convert debug output to print native NT path.
	* security.cc (set_file_attribute): Ditto.
	* syscalls.cc (try_to_bin): Ditto and fix buggy debug statement.

2007-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (RtlAcquirePebLock): Declare.
	(RtlReleasePebLock): Declare.
	* path.cc (cwdstuff::set): Change PEB only while it's locked.

2007-08-16  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_base::get_namehash): Use NT native path.
	* fhandler_disk_file.cc (readdir_get_ino): Ditto in call to
	hash_path_name.
